--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,11 @@
             <a href="https://www.instagram.com/aj_fictions" class="btn-dark">
                 <span class="text-secondary"><i class="fa fa-instagram"></i> aj_fictions</span>
             </a>
+
+            <a href="https://www.linkedin.com/in/ajay-2r3" class="btn-dark">
+                <span class="text-secondary"><i class="fa fa-linkedin"></i> Linkedin</span>
+            </a>
           </div>
-        </div>
       </main>
 
 
